--- a/codedeploy/deploy-scripts/7417_API.service
+++ b/codedeploy/deploy-scripts/7417_API.service
@@ -11,7 +11,7 @@ KillSignal=SIGINT
 SyslogIdentifier=7417API
 Environment=ASPNETCORE_ENVIRONMENT=Production
 Environment=DOTNET_PRINT_TELEMETRY_MESSAGE=false
-Environment=ASPNETCORE_URLS=http://*:80
+Environment=HOME=/root
 
 [Install]
 WantedBy=multi-user.target
