--- a/DSCC.7417.API/DSCC.7417.API.csproj
+++ b/DSCC.7417.API/DSCC.7417.API.csproj
@@ -5,6 +5,12 @@
     <RootNamespace>DSCC._7417.API</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702:1591</NoWarn>
+    <DocumentationFile>C:\Users\User\Desktop\DSCC.CW1.7417.API\DSCC.7417.API\DSCC.7417.API.xml</DocumentationFile>
+  </PropertyGroup>
+
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
